--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web adaptable</title>
+    <title>RRS Reformas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="texto-principal margen-interno">
-                <h1>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!
+                <h1>El dolor en sÃ­ mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. Â¡Pero como es el arquitecto de la verdad para algunos, no estÃ¡ obligado a rehuir la distinciÃ³n de la vida para los bienaventurados, los mÃ¡s dignos de rechazar el odio que nunca sigue!
                 </h1>
             </div>
         </header>
@@ -37,28 +37,28 @@
                     <img src="imagenes/Suelo.png" alt="Suelo de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Un cambio necesario</h2>
-                    <p>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!</p>
+                    <p>El dolor en sÃ­ mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. Â¡Pero como es el arquitecto de la verdad para algunos, no estÃ¡ obligado a rehuir la distinciÃ³n de la vida para los bienaventurados, los mÃ¡s dignos de rechazar el odio que nunca sigue!</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
                     <img src="imagenes/Pared.png" alt="Pared de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Decora tus paredes</h2>
-                    <p>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!</p>
+                    <p>El dolor en sÃ­ mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. Â¡Pero como es el arquitecto de la verdad para algunos, no estÃ¡ obligado a rehuir la distinciÃ³n de la vida para los bienaventurados, los mÃ¡s dignos de rechazar el odio que nunca sigue!</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
                     <img src="imagenes/Cocina.png" alt="Cocina de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Soluciones para tu cocina</h2>
-                    <p>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!</p>
+                    <p>El dolor en sÃ­ mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. Â¡Pero como es el arquitecto de la verdad para algunos, no estÃ¡ obligado a rehuir la distinciÃ³n de la vida para los bienaventurados, los mÃ¡s dignos de rechazar el odio que nunca sigue!</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
-                    <img src="imagenes/Baño.png" alt="Baño de azulejos">
+                    <img src="imagenes/BaÃ±o.png" alt="BaÃ±o de azulejos">
                     <h3>18/Julio/2022</h3>
-                    <h2>azulejo para tu baño</h2>
-                    <p>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!</p>
+                    <h2>azulejo para tu baÃ±o</h2>
+                    <p>El dolor en sÃ­ mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. Â¡Pero como es el arquitecto de la verdad para algunos, no estÃ¡ obligado a rehuir la distinciÃ³n de la vida para los bienaventurados, los mÃ¡s dignos de rechazar el odio que nunca sigue!</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <nav class="navegacion">
