--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="texto-principal margen-interno">
-                <h1>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia.  ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!
+                <h1>Te ayudamos a reformar tu casa y conseguir lo que quieres, solado y alicatado para todo el hogar.
                 </h1>
             </div>
         </header>
