--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
                     <p>El dolor en sí mismo es dolor, le encanta ser potenciado por el proceso de adipiscencia. ¡Pero como es el arquitecto de la verdad para algunos, no está obligado a rehuir la distinción de la vida para los bienaventurados, los más dignos de rechazar el odio que nunca sigue!</p>
                     <a href="#">Leer mas...</a>
                 </article>
-                <nav class="navegacion">
-                    <a href="#">Inicio /</a>
-                    <a href="#">1 /</a>
-                    <a href="#">2 /</a>
-                    <a href="#">3 /</a>
-                    <a href="#">4 /</a>
-                    <a href="#">Final</a>
-                </nav>
             </div>
             <aside class="aside">
                 <div class="publicidad">
@@ -79,7 +71,7 @@
                 <div class="publicidad">
                     <h4>Horario laboral</h4>
                     <img src="imagenes/Horario.png" alt="Agenda con calendario y boligrafo">
-                    <p>De lunes a viernes hrario ininterrumpido de 08:30 a 16:00</p>
+                    <p>De lunes a viernes horario ininterrumpido de 08:30 a 16:00</p>
                 </div>
             </aside>
         </section>
