--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
-                    <img src="imagenes/piscina10.jpg" alt="Cocina de azulejos">
+                    <img src="/imagenes/piscina10.jpg" alt="Cocina de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>piscina o bañorera de obra</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
-                    <img src="imagenes/ducha.jpg" alt="Baño de azulejos">
+                    <img src="/imagenes/ducha.jpg" alt="Baño de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>azulejo para tu baño</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
