--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 </div>
                 <div class="nav">
                     <div><a href="page.html"><img src="/imagenes/inicio.webp">Inicio</a></div>
-                    <div><a href="page.html"><img src="imagenes/informacion.webp">Nosotros</a></div>
-                    <div><a href="#"><img src="imagenes/trabajos.webp">Servicios</a></div>
-                    <div><a href="#"><img src="imagenes/noticias.webp">Noticias</a></div>
-                    <div><a href="#"><img src="imagenes/contacto.webp">Contacto</a></div>
+                    <div><a href="page.html"><img src="/imagenes/informacion.webp">Nosotros</a></div>
+                    <div><a href="#"><img src="/imagenes/trabajos.webp">Servicios</a></div>
+                    <div><a href="#"><img src="/imagenes/noticias.webp">Noticias</a></div>
+                    <div><a href="#"><img src="/imagenes/contacto.webp">Contacto</a></div>
                 </div>
             </div>
             <div class="texto-principal margen-interno">
@@ -30,14 +30,14 @@
         <section class="section margen-interno">
             <div class="articulos">
                 <article class="article">
-                    <img src="imagenes/Suelo16.jpg" alt="Suelo de azulejos">
+                    <img src="/imagenes/Suelo16.jpg" alt="Suelo de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Renueva tus suelos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id!</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
-                    <img src="imagenes/Pared9.jpg" alt="Pared de azulejos">
+                    <img src="/imagenes/Pared9.jpg" alt="Pared de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Paredes renovadas</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
