--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="section margen-interno">
             <div class="articulos">
                 <article class="article">
-                    <img src="imagenes/Suelo16.jpg" alt="Suelo de azulejos">
+                    <img src="imagenes/suelo16.jpg" alt="Cocina de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Renueva tus suelos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id!</p>
