--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <section class="section margen-interno">
             <div class="articulos">
                 <article class="article">
-                    <img src="imagenes/suelo16.jpg" alt="Cocina de azulejos">
+                    <img src="imagenes/Suelo16.jpg" alt="Suelo de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Renueva tus suelos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id!</p>
                     <a href="#">Leer mas...</a>
                 </article>
                 <article class="article">
-                    <img src="imagenes/pared9.jpg" alt="Cocina de azulejos">
+                    <img src="imagenes/Pared9.jpg" alt="Pared de azulejos">
                     <h3>18/Julio/2022</h3>
                     <h2>Paredes renovadas</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
