--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
         <section class="section margen-interno">
             <div class="articulos">
                 <article class="article">
-                    <img src="imagenes/suelo16.jpg" alt="Cocina de azulejos">
-                    <h3>18/Julio/2022</h3>
+                    <img src="imagenes/suelo16.jpg" alt="Suelo de tarima">
                     <h2>Renueva tus suelos</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id!</p>
-                    <a href="#">Leer mas...</a>
+                    <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Si quieres suelo, esta es tu inspiración.</p>
+                <div class="mas">
+                    <a href="#">Ver más...</a>
+                </div>
                 </article>
                 <article class="article">
-                    <img src="imagenes/pared9.jpg" alt="Cocina de azulejos">
-                    <h3>18/Julio/2022</h3>
+                    <img src="imagenes/pared9.jpg" alt="Pared con hueco">
                     <h2>Paredes renovadas</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
-                    <a href="#">Leer mas...</a>
+                <div class="mas">
+                    <a href="#">Ver más...</a>
+                </div>
                 </article>
                 <article class="article">
-                    <img src="imagenes/piscina10.jpg" alt="Cocina de azulejos">
-                    <h3>18/Julio/2022</h3>
+                    <img src="imagenes/piscina10.jpg" alt="Piscina de obra">
                     <h2>piscina o bañorera de obra</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
-                    <a href="#">Leer mas...</a>
+                    <a href="#">Ver más...</a>
                 </article>
                 <article class="article">
-                    <img src="imagenes/ducha.jpg" alt="Baño de azulejos">
-                    <h3>18/Julio/2022</h3>
+                    <img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha">
                     <h2>azulejo para tu baño</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
-                    <a href="#">Leer mas...</a>
+                    <a href="#">Ver más...</a>
                 </article>
             </div>
             <aside class="aside">
