--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 </div>
             </div>
             <div class="texto-principal margen-interno">
-                <h1>Te ayudamos a reformar tu casa y conseguir lo que quieres, solado y alicatado para todo el hogar. 
-                </h1>
+                <h1>Solado y alicatado. Reformas o nueba construcción.</h1>
             </div>
         </header>
         <section class="section margen-interno">
