--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
                 </article>
                 <article class="article">
                     <img src="imagenes/pared9.jpg" alt="Pared con hueco">
-                    <h2>Paredes renovadas</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
+                    <h2>Paredes nuebas</h2>
+                    <p>Presdes que merece la pena ver y disfrurtar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Renueva esa pared que no te dice nada.</p>
                 <div class="mas">
                     <a href="#">Ver más...</a>
                 </div>
                 </article>
                 <article class="article">
                     <img src="imagenes/piscina10.jpg" alt="Piscina de obra">
-                    <h2>piscina o bañorera de obra</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
+                    <h2>Piscina o bañorera de obra</h2>
+                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Fabricamos piscina o bañera a tu gusto y/o necesidad.</p>
                     <a href="#">Ver más...</a>
                 </article>
                 <article class="article">
                     <img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha">
-                    <h2>azulejo para tu baño</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni repudiandae, sint esse officia mollitia fuga consequatur at aut numquam veritatis ducimus suscipit magnam adipisci architecto labore alias id</p>
+                    <h2>Azulejo para tu baño</h2>
+                    <p>Sustituir plato de ducha por ducha solada y alicatada una solucuión practica, elegante y segurta.</p><p>Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
                     <a href="#">Ver más...</a>
                 </article>
             </div>
