--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="index.html" ><img src="imagenes/Logo.png" alt="Logo"><br>R.R.S.<br>Solados y alicatados</a>
                 </div>
                 <div class="nav">
-                    <div><a href="page.html"><img src="imagenes/inicio.webp">Inicio</a></div>
+                    <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
                     <div><a href="page.html"><img src="imagenes/informacion.webp">Nosotros</a></div>
                     <div><a href="#"><img src="imagenes/trabajos.webp">Servicios</a></div>
                     <div><a href="#"><img src="imagenes/noticias.webp">Noticias</a></div>
