--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="nav">
                     <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
-                    <div><a href="nosotros.html"><img src="imagenes/informacion.webp">Nosotros</a></div>
+                    <div><a href="nosotros"><img src="imagenes/informacion.webp">Nosotros</a></div>
                     <div><a href="#"><img src="imagenes/trabajos.webp">Servicios</a></div>
                     <div><a href="#"><img src="imagenes/noticias.webp">Noticias</a></div>
                     <div><a href="#"><img src="imagenes/contacto.webp">Contacto</a></div>
