--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <div><a href="#"><img src="imagenes/contacto.webp">Contacto</a></div>
                 </div>
             </div>
+<pre class="temp">
+   Para Contactar: <a href="mailto:raelalma@hotmail.com" style="text-decoration: underline ;">Email - raelalma@hotmail.com</a>   Por WhatsApp al <a href="https://wa.me/+34637843098" style="text-decoration: underline; color:blue;">Movil:  637 84 30 98</a>
+</pre>
             <div class="texto-principal margen-interno">
                 <h1>Solado y alicatado. Reformas o nueba construcción.</h1>
             </div>
@@ -39,7 +42,7 @@
                 <article class="article">
                     <img src="imagenes/pared9.jpg" alt="Pared con hueco">
                     <h2>Paredes nuebas</h2>
-                    <p>Presdes que merece la pena ver y disfrurtar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Renueva esa pared que no te dice nada.</p>
+                    <p>Paresdes que merece la pena ver y disfrurtar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Renueva esa pared que no te dice nada.</p>
                 <div class="mas">
                     <a href="#">Ver más...</a>
                 </div>
