--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <header class="header margen-interno">
             <div class="menu margen-interno">
                 <div class="logo">
-                    <a href="https://p3p2.github.io/rrs/" ><img src="imagenes/Logo.png" alt="Logo"><br>R.R.S.<br>Solados y alicatados</a>
+                    <a href="" ><img src="imagenes/Logo.png" alt="Logo"><br>R.R.S.<br>Solados y alicatados</a>
                 </div>
                 <div class="nav">
-                    <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
+                    <div><a href=""><img src="imagenes/inicio.webp">Inicio</a></div>
                     <div><a href="https://p3p2.github.io/rrs/nosotros"><img src="imagenes/informacion.webp">Nosotros</a></div>
                     <div><a href="#"><img src="imagenes/trabajos.webp">Servicios</a></div>
                     <div><a href="#"><img src="imagenes/noticias.webp">Noticias</a></div>
-                    <div><a href="#"><img src="imagenes/contacto.webp">Contacto</a></div>
+                    <div><a href="https://p3p2.github.io/rrs/contacto"><img src="imagenes/contacto.webp">Contacto</a></div>
                 </div>
             </div>
 <pre class="temp">
