--- a/nosotros.html
+++ b/nosotros.html
@@ -16,10 +16,10 @@
                 </div>
                 <div class="nav">
                     <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
-                    <div><a href="page.html"><img src="imagenes/informacion.webp">Nosotros</a></div>
+                    <div><a href=""><img src="imagenes/informacion.webp">Nosotros</a></div>
                     <div><a href="#"><img src="imagenes/trabajos.webp">Servicios</a></div>
                     <div><a href="#"><img src="imagenes/noticias.webp">Noticias</a></div>
-                    <div><a href="#"><img src="imagenes/contacto.webp">Contacto</a></div>
+                    <div><a href="https://p3p2.github.io/rrs/contacto"><img src="imagenes/contacto.webp">Contacto</a></div>
                 </div>
             </div>
             <div class="texto-principal margen-interno">
