--- a/contacto.html
+++ b/contacto.html
@@ -30,11 +30,11 @@
         <h2>Para contactar</h2>
         <section class="section margen-interno">
             <div class="texto-pagina">
-                <h3 style="font-size: 30px;">Por Email:</h3>
-                
-                <p class="texto-pagina"><a href="mailto:raelalma@hotmail.com">Cick aquí para llamar </a></p>
+                <h3 style="font-size: 30px;">Por E-mail:</h3>
+                <p class="texto-pagina">Correo Electrónico: raelalma@hotmail.com<br><a href="mailto:raelalma@hotmail.com">Cick aquí para enviar E-mail </a></p>
+
                 <h3 style="font-size: 30px;">Por WhatsApp:</h3>
-                <p class="texto-pagina"> <a href="https://wa.me/+34637843098">Cick aquí para WhatsApp</a> </p>
+                <p class="texto-pagina">Teléfono: <a href="tel:+34637843098">637843098</a><br> <a href="https://wa.me/+34637843098">Cick aquí para WhatsApp</a></p>
             </div>
         </div>
         </section>
