--- a/index.html
+++ b/index.html
@@ -29,32 +29,28 @@
         <section class="section margen-interno">
             <div class="articulos">
                 <article class="article">
-                    <img src="imagenes/suelo16.jpg" alt="Suelo de tarima">
+                    <a class="enlace" href="#"><img src="imagenes/suelo16.jpg" alt="Suelo de tarima"></a>
                     <h2>Renueva tus suelos</h2>
-                    <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Si quieres suelo, esta es tu inspiración.</p>
-                <div class="mas">
-                    <a href="#">Ver más...</a>
-                </div>
+                    <a href="#">Aquí para cambiar suelo.</a>
+                    <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Si quieres removar tus suelos, entra y mira lo que ya hemos echo, quizás aquí esta es tu inspiración.</p>
                 </article>
                 <article class="article">
-                    <img src="imagenes/pared9.jpg" alt="Pared con hueco">
+                    <a class="enlace" href="#"><img src="imagenes/pared9.jpg" alt="Pared con hueco"></a>
                     <h2>Paredes nuebas</h2>
-                    <p>Paresdes que merece la pena ver y disfrurtar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Renueva esa pared que no te dice nada.</p>
-                <div class="mas">
-                    <a href="#">Ver más...</a>
-                </div>
+                    <a href="#">Aquí para cambiar partedes.</a>
+                    <p>Paresdes que merece la pena ver y disfrurtar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Renueva tus paredes.</p>
                 </article>
                 <article class="article">
-                    <img src="imagenes/piscina10.jpg" alt="Piscina de obra">
-                    <h2>Piscina o bañorera de obra</h2>
-                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Fabricamos piscina o bañera a tu gusto y/o necesidad.</p>
-                    <a href="#">Ver más...</a>
+                    <a class="enlace" href="#"><img src="imagenes/piscina10.jpg" alt="Piscina de obra"></a>
+                    <h2>Piscinas y bañeras</h2>
+                    <a href="#">Aquí para piscina o bañera.</a>
+                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>creamos piscinas y bañera .</p>
                 </article>
                 <article class="article">
-                    <img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha">
+                    <a class="enlace" href=""><img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha"></a>
                     <h2>Azulejo para tu baño</h2>
+                    <a href="#">Aquí para ver baños y duchas.</a>
                     <p>Sustituir plato de ducha por ducha solada y alicatada una solucuión practica, elegante y segurta.</p><p>Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
-                    <a href="#">Ver más...</a>
                 </article>
             </div>
             <aside class="aside">
