--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,8 @@
         </section>
         <footer class="footer margen-interno">
             <nav class="pie margen">
-                <a href="#">Desarrollado por Javi</a>
+                <p>Esta página no utiliza cookies de ningún tipo 👍</p>
+                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
         </footer>
     </div>
