--- a/nosotros.html
+++ b/nosotros.html
@@ -16,9 +16,9 @@
                 </div>
                 <div class="nav">
                     <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
-                    <div><a href=""><img src="imagenes/informacion.webp">Nosotros</a></div>
-                    <div><a href="#"><img src="imagenes/trabajos.webp">Servicios</a></div>
-                    <div><a href="#"><img src="imagenes/noticias.webp">Noticias</a></div>
+                    <div><a href=" "><img src="imagenes/informacion.webp">Nosotros</a></div>
+                    <div><a href="https://p3p2.github.io/rrs/servicios"><img src="imagenes/trabajos.webp">Servicios</a></div>
+                    <div><a href="https://p3p2.github.io/rrs/noticias"><img src="imagenes/noticias.webp">Noticias</a></div>
                     <div><a href="https://p3p2.github.io/rrs/contacto"><img src="imagenes/contacto.webp">Contacto</a></div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
             <div class="texto-pagina">
                 <h3 style="font-size: 30px;">Experiencia y dedicación.</h3>
                 
-                <p class="texto-pagina">Desde 1995 dedicasdo al solado y alicatado de todo tipo de superficies. Comprometiendonos con tu proyecto como si fuera nuestro.</p>
+                <p class="texto-pagina">Desde 1995 dedicados al solado y alicatado de todo tipo de superficies. Comprometiendonos con tu proyecto como si fuera nuestro.</p>
                 <h3 style="font-size: 30px;">De confianza.</h3>
                 <p class="texto-pagina">Empresa pequeña con gente de copnfianza para poder garantizar la seguridad y buen hacer de nuestro trabajo.</p>
             </div>
