--- a/noticias.html
+++ b/noticias.html
@@ -23,16 +23,16 @@
                 </div>
             </div>
             <div class="texto-principal margen-interno">
-                <h1 class="margen-interno">Novedades</h1>
+                <h1 class="margen-interno">Noticias</h1>
             </div>
         </header>
         <div  class="container">
-        <h2>Noticias y novedade </h2>
+        <h2>Noticias y novedades </h2>
         <section class="section margen-interno">
             <div class="texto-pagina">
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
                 
-                <p class="texto-pagina">Trabajamos en la zona norte y noroeste de la comunidas de madrid.</p>
+                <p class="texto-pagina">Trabajamos en la zona norte y noroeste de la comunidad de Madrid.</p>
                 <p class="texto-pagina">
                   Becerril de la sierra, 
                   Cerceda, 
