--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="texto-principal margen-interno">
-                <h1>Solado y alicatado. Reformas o nueba construcción.</h1>
+                <h1>Solado y alicatado. Reformas o nueva construcción.</h1>
             </div>
         </header>
         <section class="section margen-interno">
@@ -31,38 +31,38 @@
                 <article class="article">
                     <a class="enlace" href="#"><img src="imagenes/suelo16.jpg" alt="Suelo de tarima"></a>
                     <h2>Renueva tus suelos</h2>
-                    <a href="#">Aquí para cambiar suelo.</a>
-                    <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Si quieres removar tus suelos, entra y mira lo que ya hemos echo, quizás aquí esta es tu inspiración.</p>
+                    <a href="#">Aquí para suelos.</a>
+                    <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Si quieres renovar tus suelos, entra y mira lo que ya hemos hecho, quizás aquí está tu inspiración.</p>
                 </article>
                 <article class="article">
                     <a class="enlace" href="#"><img src="imagenes/pared9.jpg" alt="Pared con hueco"></a>
                     <h2>Paredes nuebas</h2>
-                    <a href="#">Aquí para cambiar partedes.</a>
-                    <p>Paresdes que merece la pena ver y disfrurtar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>Renueva tus paredes.</p>
+                    <a href="#">Aquí para paredes.</a>
+                    <p>Paredes que merece la pena ver y disfrutar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Renueva tus paredes.</p>
                 </article>
                 <article class="article">
                     <a class="enlace" href="#"><img src="imagenes/piscina10.jpg" alt="Piscina de obra"></a>
                     <h2>Piscinas y bañeras</h2>
                     <a href="#">Aquí para piscina o bañera.</a>
-                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>creamos piscinas y bañera .</p>
+                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>creamos piscinas y bañera .</p>
                 </article>
                 <article class="article">
                     <a class="enlace" href=""><img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha"></a>
                     <h2>Azulejo para tu baño</h2>
                     <a href="#">Aquí para ver baños y duchas.</a>
-                    <p>Sustituir plato de ducha por ducha solada y alicatada una solucuión practica, elegante y segurta.</p><p>Mira lo que te podemos ofrecer y consulta alguno trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
+                    <p>Sustituir plato de ducha por ducha solada y alicatada, una solución práctica, elegante y segura.</p><p>Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
                 </article>
             </div>
             <aside class="aside">
                 <div class="publicidad">
                     <h4>Zona donde trabajamos</h4>
                     <img src="imagenes/Mapa.png" alt="Mapa con coche">
-                    <p>Estamos disponibles para toda la zona de el norte de madrid</p>
+                    <p>Estamos disponibles para toda la zona norte de Madrid</p>
                 </div>
                 <div class="publicidad">
                     <h4>Horario laboral</h4>
                     <img src="imagenes/Horario.png" alt="Agenda con calendario y boligrafo">
-                    <p>De lunes a viernes hrario ininterrumpido de 08:30 a 16:00</p>
+                    <p>De lunes a viernes horario ininterrumpido de 08:30 a 16:00</p>
                 </div>
             </aside>
         </section>
