--- a/nosotros.html
+++ b/nosotros.html
@@ -32,9 +32,9 @@
             <div class="texto-pagina">
                 <h3 style="font-size: 30px;">Experiencia y dedicación.</h3>
                 
-                <p class="texto-pagina">Desde 1995 dedicados al solado y alicatado de todo tipo de superficies. Comprometiendonos con tu proyecto como si fuera nuestro.</p>
+                <p class="texto-pagina">Desde 1995 dedicados al solado y alicatado de todo tipo de superficies. Comprometiéndonos con tu proyecto como si fuera nuestro.</p>
                 <h3 style="font-size: 30px;">De confianza.</h3>
-                <p class="texto-pagina">Empresa pequeña con gente de copnfianza para poder garantizar la seguridad y buen hacer de nuestro trabajo.</p>
+                <p class="texto-pagina">Empresa pequeña con gente de confianza para poder garantizar la seguridad y buen hacer de nuestro trabajo.</p>
             </div>
         </div>
         </section>
