--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section class="section margen-interno">
             <div class="articulos">
                 <article class="article">
-                    <a class="enlace" href="#"><img src="imagenes/suelo16.jpg" alt="Suelo de tarima"></a>
+                    <a class="enlace" href="https://p3p2.github.io/rrs/renueva-tus-suelos"><img src="imagenes/suelo16.jpg" alt="Suelo de tarima"></a>
                     <h2>Renueva tus suelos</h2>
-                    <a href="#">Aquí para suelos.</a>
+                    <a href="https://p3p2.github.io/rrs/renueva-tus-suelos">Aquí para suelos.</a>
                     <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Si quieres renovar tus suelos, entra y mira lo que ya hemos hecho, quizás aquí está tu inspiración.</p>
                 </article>
                 <article class="article">
@@ -55,9 +55,11 @@
             </div>
             <aside class="aside">
                 <div class="publicidad">
-                    <h4>Zona donde trabajamos</h4>
-                    <img src="imagenes/Mapa.png" alt="Mapa con coche">
-                    <p>Estamos disponibles para toda la zona norte de Madrid</p>
+                    <a href="https://p3p2.github.io/rrs/noticias">
+                        <h4>Zona donde trabajamos</h4>
+                        <img src="imagenes/Mapa.png" alt="Mapa con coche">
+                        <p>Estamos disponibles para toda la zona norte de Madrid</p>
+                    </a>
                 </div>
                 <div class="publicidad">
                     <h4>Horario laboral</h4>
