--- a/renueva-tus-suelos.html
+++ b/renueva-tus-suelos.html
@@ -39,9 +39,11 @@
           </div>
             <aside class="aside">
                 <div class="publicidad">
-                    <h4>Zona donde trabajamos</h4>
-                    <img src="imagenes/Mapa.png" alt="Mapa con coche">
-                    <p>Estamos disponibles para toda la zona norte de Madrid</p>
+                    <a href="https://p3p2.github.io/rrs/noticias">
+                        <h4>Zona donde trabajamos</h4>
+                        <img src="imagenes/Mapa.png" alt="Mapa con coche">
+                        <p>Estamos disponibles para toda la zona norte de Madrid</p>
+                    </a>
                 </div>
                 <div class="publicidad">
                     <h4>Horario laboral</h4>
@@ -51,7 +53,9 @@
             </aside>
         </section>
 
-        
+        <div>
+            <p>Próximamente bajo estas líneas podrás ver imágenes de nuestros trabajos.</p>
+        </div>
 
         <footer class="footer margen-interno">
             <nav class="pie margen">
