--- a/renueva-suelos.html
+++ b/renueva-suelos.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R.R.S Solados y Alicatados</title>
+    <title>Renueva tus suelos</title>
     <link rel="stylesheet" href="style.css">
-    <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
 </head>
 <body>
     <div class="padre">
         <header class="header margen-interno">
             <div class="menu margen-interno">
                 <div class="logo">
-                    <a href="" ><img src="imagenes/Logo.png" alt="Logo"><br>R.R.S.<br>Solados y alicatados</a>
+                    <a href="https://p3p2.github.io/rrs" ><img src="imagenes/Logo.png" alt="Logo"><br>R.R.S.<br>Solados y alicatados</a>
                 </div>
                 <div class="nav">
-                    <!-- <div><a href=""><img src="imagenes/inicio.webp">Inicio</a></div> -->
+                    <div><a href="https://p3p2.github.io/rrs"><img src="imagenes/inicio.webp">Inicio</a></div>
                     <div><a href="https://p3p2.github.io/rrs/nosotros"><img src="imagenes/informacion.webp">Nosotros</a></div>
                     <div><a href="https://p3p2.github.io/rrs/servicios"><img src="imagenes/trabajos.webp">Servicios</a></div>
                     <div><a href="https://p3p2.github.io/rrs/noticias"><img src="imagenes/noticias.webp">Noticias</a></div>
@@ -24,37 +23,20 @@
                 </div>
             </div>
             <div class="texto-principal margen-interno">
-                <h1>Solado y alicatado. Reformas o nueva construcción.</h1>
+                <h1>Renueva tus suelos</h1>
             </div>
-            <h2 class="texto-principal margen-interno">Zona norte de madrid</h2>
         </header>
+        <br>
         <section class="section margen-interno">
+          <div class="img-post">
+            <img class="img" src="imagenes/suelo16.jpg" alt="Suelo de tarima">
             <div class="articulos">
                 <article class="article">
-                    <a class="enlace" href="https://p3p2.github.io/rrs/renueva-suelos"><img src="imagenes/suelo16.jpg" alt="Suelo de tarima"></a>
                     <h2>Renueva tus suelos</h2>
-                    <a href="https://p3p2.github.io/rrs/renueva-suelos">Sección de suelos.</a>
                     <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Si quieres renovar tus suelos, entra y mira lo que ya hemos hecho, quizás aquí está tu inspiración.</p>
                 </article>
-                <article class="article">
-                    <a class="enlace" href="https://p3p2.github.io/rrs/paredes-nuevas"><img src="imagenes/pared9.jpg" alt="Pared con hueco"></a>
-                    <h2>Paredes nuebas</h2>
-                    <a href="https://p3p2.github.io/rrs/paredes-nuevas">Sección de paredes.</a>
-                    <p>Paredes que merece la pena ver y disfrutar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Renueva tus paredes.</p>
-                </article>
-                <article class="article">
-                    <a class="enlace" href="https://p3p2.github.io/rrs/piscinas-baneras"><img src="imagenes/piscina10.jpg" alt="Piscina de obra"></a>
-                    <h2>Piscinas y bañeras</h2>
-                    <a href="https://p3p2.github.io/rrs/piscinas-baneras">Aquí para piscina o bañera.</a>
-                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>creamos piscinas y bañera .</p>
-                </article>
-                <article class="article">
-                    <a class="enlace" href=""><img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha"></a>
-                    <h2>Azulejo para tu baño</h2>
-                    <a href="#">Aquí para ver baños y duchas.</a>
-                    <p>Sustituir plato de ducha por ducha solada y alicatada, una solución práctica, elegante y segura.</p><p>Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
-                </article>
             </div>
+          </div>
             <aside class="aside">
                 <div class="publicidad">
                     <a href="https://p3p2.github.io/rrs/noticias">
@@ -70,6 +52,11 @@
                 </div>
             </aside>
         </section>
+
+        <div>
+            <p>Próximamente bajo estas líneas podrás ver imágenes de nuestros trabajos.</p>
+        </div>
+
         <footer class="footer margen-interno">
             <nav class="pie margen">
                 <p>Esta página no utiliza cookies de ningún tipo 👍</p>
