--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="nav">
                     <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
-                    <div><a href=" "><img src="imagenes/informacion.webp">Nosotros</a></div>
+                    <!-- <div><a href=" "><img src="imagenes/informacion.webp">Nosotros</a></div> -->
                     <div><a href="https://p3p2.github.io/rrs/servicios"><img src="imagenes/trabajos.webp">Servicios</a></div>
                     <div><a href="https://p3p2.github.io/rrs/noticias"><img src="imagenes/noticias.webp">Noticias</a></div>
                     <div><a href="https://p3p2.github.io/rrs/contacto"><img src="imagenes/contacto.webp">Contacto</a></div>
