--- a/noticias.html
+++ b/noticias.html
@@ -19,7 +19,7 @@
                     <div><a href="https://p3p2.github.io/rrs/"><img src="imagenes/inicio.webp">Inicio</a></div>
                     <div><a href="https://p3p2.github.io/rrs/nosotros"><img src="imagenes/informacion.webp">Nosotros</a></div>
                     <div><a href="https://p3p2.github.io/rrs/servicios"><img src="imagenes/trabajos.webp">Servicios</a></div>
-                    <div><a href=" "><img src="imagenes/noticias.webp">Noticias</a></div>
+                    <!-- <div><a href=" "><img src="imagenes/noticias.webp">Noticias</a></div> -->
                     <div><a href="https://p3p2.github.io/rrs/contacto"><img src="imagenes/contacto.webp">Contacto</a></div>
                 </div>
             </div>
