--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>creamos piscinas y bañera .</p>
                 </article>
                 <article class="article">
-                    <a class="enlace" href=""><img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha"></a>
+                    <a class="enlace" href="https://p3p2.github.io/rrs/azulejo-bano"><img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha"></a>
                     <h2>Azulejo para tu baño</h2>
-                    <a href="#">Aquí para ver baños y duchas.</a>
+                    <a href="https://p3p2.github.io/rrs/azulejo-bano">Aquí para ver baños y duchas.</a>
                     <p>Sustituir plato de ducha por ducha solada y alicatada, una solución práctica, elegante y segura.</p><p>Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
                 </article>
             </div>
