--- a/paredes-nuevas.html
+++ b/paredes-nuevas.html
@@ -29,7 +29,7 @@
         <br>
         <section class="section margen-interno">
           <div class="img-post">
-            <img class="img" src="imagenes/pared.png" alt="Pared de azulejo">
+            <img class="img" src="imagenes/Pared.png" alt="Pared de azulejo">
             <div class="articulos">
                 <article class="article">
                     <h2>Renueva tus paredes</h2>
