--- a/piscinas-baneras.html
+++ b/piscinas-baneras.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piscinas y bañeras</title>
     <link rel="stylesheet" href="style.css">
+    <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
 </head>
 <body>
     <div class="padre">
