--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="lalExfN5107PVK-Y4C5hUGpJlNXEhIC81AsCHREdPk8" />
     <title>R.R.S Solados y Alicatados</title>
     <link rel="stylesheet" href="style.css">
     <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
